Fix mobile bug aboutMe overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ table{
 .container-aboutMe{
     background: #C2B8A3;
     width: 100%;
-    height: 80vh;
+    min-height: 80vh;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -130,7 +130,7 @@ table{
     width: 80%;
     height: auto;
     margin: 10px;
-    padding: 8%;
+    padding: 6%;
 }
 
 .aboutMe h3{
@@ -314,6 +314,7 @@ table{
 
     .skills h4{
         text-align: center;
+        justify-content: center;
     }
 }
     
